# replit-cursor

./: main.py  pyproject.toml
static/: script.js
templates/: index.html
